Add API to support getting one news and add more HTTP return codes
